# xbb-server

./: .gitignore  Cargo.toml  LICENSE  config.json
.github/workflows/: release.yml
api/: api.yaml
cert/: gen.sh
sql/: init_db.sql
src/: db.rs  error.rs  main.rs  opt.rs
src/model/: comment.rs  mod.rs  post.rs  repo.rs  subscribe.rs  sync.rs  user.rs
src/router/: comment.rs  file.rs  mod.rs  post.rs  repo.rs  subscribe.rs  sync.rs  user.rs  utils.rs  version.rs
