[package]
name = "xbb-server"
version = "0.0.1"
edition = "2021"
authors = ["eluvk.dev@gmail.com"]
description = "Server Endpoint for XBB"

[dependencies]
anyhow = "1.0.89"
chrono = { version = "0.4.38", features = ["serde"] }
rusqlite = { version = "0.32.1", features = ["bundled", "chrono"] }
salvo = { version = "0.72.4", features = ["rustls", "force-https", "basic-auth"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
thiserror = "1.0.64"
tokio = { version = "1.40.0" }
tracing = "0.1.40"
tracing-appender = "0.2.3"
tracing-subscriber = { version = "0.3.18", features = ["local-time"] }
uuid = { version = "1.10.0", features = ["v4"] }
